Project-004-Phonebook-Application/cloudformation.yml
AWSTemplateFormatVersion: 2010-09-09

Description: |
  CloudFormation Template for Phonebook Application. This template creates Application Load Balancer 
  with Auto Scaling Group of Amazon Linux 2023 (ami-0c101f26f147fa7fd) EC2 Instances which host Python Flask Web Application.
  EC2 instances are placed within WebServerSecurityGroup which allows http (80) connections only from ALBSecurityGroup,
  and allows connections only within itself. RDS DB instance is placed within WebServerSecurityGroup 
  so that Database Server can communicate with Web Servers. Application Load Balancer is placed within ALBSecurityGroup 
  which allows http (80) connections from anywhere. WebServerASG Auto Scaling Group is using the LT 
  Launch Template in order to spin up instances needed. LT Launch Template is configured to prepare Python Flask 
  environment on EC2, and to deploy Phonebook Application on Flask Server after downloading the app code 
  from Github repository.

Parameters:
  MyKeyName:
    Description: Please enter your key pair name without .pem
    Type: AWS::EC2::KeyPair::KeyName
    Default: rafe-lesson
  MyVPC:
    Description: VPC Id of your existing account
    Type: AWS::EC2::VPC::Id
    Default: vpc-f52d178f
  Subnets:
    Description:  Please select your subnets used by ALB
    Type: List<AWS::EC2::Subnet::Id>
    Default: subnet-077c9758,subnet-3ccd235a,subnet-c41ba589,subnet-ed49bccc

Resources:
  MyALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Allows 22 and 80" # Required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
  MyWebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Allows 22 and 80" # Required
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
  MyRDSSecurityGroup:
    Type: AWS::RDS::DBSecurityGroup
    Properties:
      DBSecurityGroupIngress: # Required
        - EC2SecurityGroupId: !GetAtt MyWebServerSecurityGroup.Id # Point to created web server sg
      GroupDescription: "RDS security group" # Required
  MyLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData:
        ImageId: ami-0c101f26f147fa7fd
        InstanceType: t2.micro
        KeyName: !Ref MyKeyName
        SecurityGroupIds:
          - !GetAtt MyWebServerSecurityGroup.GroupId
        UserData:
          Fn::Base64:
            !Sub 
              - |
                #!/bin/bash
                dnf update -y
                dnf install git python3-pip -y
                cd /home/ec2-user             
                echo "${MyRDSURI}" > /home/ec2-user/dbserver.endpoint
                git clone Your_Secret
                cd app
                pip install -r requirements.txt
                python3 phonebook-app.py
              - MyRDSURI: !GetAtt DBInstance.Endpoint.Address
        TagSpecifications: 
          - ResourceType: instance
            Tags:
              - Key: Name
                Value: !Sub Web Server of ${AWS::StackName} Stack
  MyTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Port: 80
      Protocol: HTTP
      TargetType: instance
      UnhealthyThresholdCount: 3
      VpcId: !Ref MyVPC
  ALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      IpAddressType: ipv4
      Name: phonebook-004-08
      Scheme: internet-facing
      SecurityGroups:
        - !GetAtt MyALBSecurityGroup.GroupId
      Subnets: !Ref Subnets 
      Type: application
  MyALBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions: # Required
        - TargetGroupArn: !Ref MyTargetGroup
          Type: forward
      LoadBalancerArn: !Ref ALB # Required
      Port: 80
      Protocol: HTTP
  ASG:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties: 
      AvailabilityZones:
        !GetAZs ""
      DesiredCapacity: 2 
      HealthCheckGracePeriod: 300
      HealthCheckType: ELB 
      LaunchTemplate:
        LaunchTemplateId: !Ref MyLaunchTemplate
        Version: !GetAtt MyLaunchTemplate.LatestVersionNumber 
      MaxSize: 3 
      MinSize: 1 
      TargetGroupARNs:
        - !Ref MyTargetGroup
  DBInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      AllocatedStorage: 20
      AllowMajorVersionUpgrade: false 
      AutoMinorVersionUpgrade: false 
      BackupRetentionPeriod: 0 
      DBInstanceClass: db.t3.micro
      DBInstanceIdentifier: phonebook-app
      DBName: clarusway_phonebook        
      DBSecurityGroups:
        - !Ref MyRDSSecurityGroup 
      Engine: MySQL
      EngineVersion: 8.0.35
      MasterUsername: admin 
      MasterUserPassword: clarusway_1234
      Port: 3306
      PubliclyAccessible: true
Outputs:
  WebsiteURL:
    Value: !Sub 
      - http://${ALBAddress}
      - ALBAddress: !GetAtt ALB.DNSName
    Description: Phonebook Application Load Balancer URL
